--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -22,12 +22,9 @@
   letter-spacing: 2px;
 }
 
-.highlight{
+.corTitulo{
   color: #b12092;
-  font-size: 3em;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+
 }
 
 .link {
@@ -43,6 +40,7 @@
   width: 100%;
   max-width: 1200px;
   flex-wrap: wrap;
+
 }
 
 .formAndChartContainer {
@@ -52,18 +50,24 @@
   justify-content: space-between;
 }
 
+
 .simulatorForm {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-height: 650px;
   gap: 15px;
+  border: 4px solid transparent;
+  border-radius: 30px;
+  background:
+  linear-gradient(#000, #000) padding-box,
+  linear-gradient(to right,  #3f025b, #b12092) border-box;
 }
 
 .simulatorForm label {
   font-weight: 600;
   font-size: 1.1em;
-  color: #000;
+  color: #fff;
 }
 
 .simulatorForm select {
@@ -71,8 +75,8 @@
   padding: 10px;
   border-radius: 8px;
   border: 1px solid #555;
-  background-color: transparent;
-  color: #000;
+  background-color: #000;
+  color: #fff;
 }
 
 
@@ -84,7 +88,7 @@
   max-width: 100%;
   border-radius: 18px;
   background-color: transparent;
-  color: #000;
+  color: #fff;
   transition: border-color 0.3s ease;
 }
 
@@ -125,14 +129,18 @@
   max-width: 90%;
   max-height: 650px;
   padding: 20px;
-  background: rgba(0,0,0,0.4);
-  border-radius: 30px;
   box-shadow: none;
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  border: 4px solid transparent;
+  border-radius: 30px;
+  background:
+  linear-gradient(#000, #000) padding-box,
+  linear-gradient(to right,  #3f025b, #b12092) border-box;
 }
 
 .chartContainer svg .chart-line {
