--- a/cripto-react/src/components/CoursePage.module.css
+++ b/cripto-react/src/components/CoursePage.module.css
@@ -32,3 +32,44 @@
     font-weight: bold;
     margin-bottom: 2rem;
   }
+
+  .floatingAd {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 400px;
+    height: auto;
+    z-index: 1000;
+    border: 0.5px solid #1b1b1b;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  }
+  
+  .floatingAd img {
+    width: 400px;
+    height: auto;
+    cursor: pointer;
+    display: block;
+  }
+  
+  .floatingAd .closeButton {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+    line-height: 0px;
+    font-size: 16px;
+
+    display: flex;
+    align-items: center;  /* Centraliza verticalmente */
+  justify-content: center;  /* Centraliza horizontalmente */
+  transform: translate(50%, -50%);
+  }
+  
