--- a/cripto-react/src/components/LessonPage.module.css
+++ b/cripto-react/src/components/LessonPage.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+
 .page {
   min-height: 100vh;
   background-color: #f5f7fa;
@@ -14,12 +17,15 @@
 }
 
 .title {
+  font-family: 'Orbitron', sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
   color: #fff;
 }
 
 .highlight {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 2.5rem;
   color: #791475 ;
 }
 
