--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -135,12 +135,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   border: 4px solid transparent;
   border-radius: 30px;
   background:
   linear-gradient(#000000d8, #000000d8) padding-box,
-  linear-gradient(to right, #b12092, #3f025b, #b12092) border-box;
+  linear-gradient(to right, #b12092, #3f025b) border-box;
 }
 
 .chartContainer svg .chart-line {
