--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -223,16 +223,47 @@ nav {
 .simulador {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  margin-left: 28px;
   flex-direction: column;
   padding: 20px;
-  margin-top: 10rem;
+  margin-top: 50px;
   color: #fff;
+}
+.simulador h2 {
+  font-weight: 500;
+  font-size: 100px;
+  margin-top: 70px;
+  color: #fff;
+}
+
+.simulador h2 span {
+  color: #b12092;
+}
+.simulador p {
+  font-size: 30px;
+  margin-left: 30px;
+  margin-top: 10px;
+  color: #7d7c7c;
+}
+
+.simuladorButton{
+  margin-left: 250px;
+  background: linear-gradient(135deg, #3f025b, #b12092);
+  color: #fff;
+  height: 50px;
+  font-size: 18px;
+  margin-top: 50px;
+  border: none;
+  border-radius: 20px;
+  font-family: 'Orbitron', sans-serif;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  padding: 10px 20px;
 }
 
 /* Footer */
 footer {
-  background-color: #a259ff;
   color: #fff;
   padding: 30px 50px 10px;
 }
