--- a/cripto-react/index.css
+++ b/cripto-react/index.css
@@ -1,1 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+@media (min-width: 1440px) {
+    .container {
+      max-width: 1300px;
+      margin: 0 auto;
+    }
+  
+    body {
+      font-size: 18px;
+    }
+  }
+
+  @media (min-width: 1600px) {
+    .section {
+      padding: 4rem 2rem;
+    }
+  
+    .grid {
+      gap: 3rem;
+    }
+  }
+
+  @media (min-width: 1400px) {
+    .sidebar {
+      display: block;
+    }
+  
+    .extra-info {
+      display: flex;
+    }
+  }
+  @media (min-width: 1800px) {
+    h1 {
+      font-size: 3rem;
+    }
+  
+    .btn {
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+    }
+  }
+  @media (min-width: 1600px) {
+    .grid {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }    
