--- a/cripto-react/src/pages/About.css
+++ b/cripto-react/src/pages/About.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000;
+    
     color: white;
     font-family: Arial, sans-serif;
 }
@@ -39,13 +39,14 @@ body {
     color: rgba(225, 225, 225, 0.903);
     margin-top: 10px;
     line-height: 1.6;
+    text-transform: uppercase;
 }
 
 .imgMundo {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 60%;
 }
 .imagem-intro img {
     width: 250px;
