--- a/cripto-react/src/pages/About.css
+++ b/cripto-react/src/pages/About.css
@@ -38,6 +38,8 @@ body {
     font-size: 18px;
     color: rgba(225, 225, 225, 0.903);
     margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     line-height: 1.6;
     text-transform: uppercase;
 }
@@ -46,8 +48,34 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 1100px;
 }
+
+.imgEsquerdo {
+    flex: 1;
+    max-width: 400px;
+}
+
+.highlight {
+    font-family: "orbitron", sans-serif;
+    font-weight: 400;
+    color: #b12092;
+  }
+  
+
+.imgEsquerdo p {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    display: flex;
+    text-align: center;
+    font-size: 18px;
+    color: rgba(225, 225, 225, 0.903);
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.6;
+}
+
 .imagem-intro img {
     width: 250px;
     max-width: 100%;
