--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -13,7 +13,6 @@ body {
   color: #fff;
 }
 
-/* Header/Navbar */
 header {
   display: flex;
   justify-content: space-between;
@@ -135,17 +134,21 @@ nav {
 }
 
 .frase h2 {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Inconsolata', sans-serif;
   font-weight: 500;
-  font-size: 50px;
+  font-size: 60px;
   margin: 70px 0;
   animation: fadeInUp 1.2s ease forwards;
   opacity: 0;
 }
 
 .frase p {
-  font-size: 30px;
+  font-family: 'Inconsolata', sans-serif;
+  font-size: 45px;
   margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #ebebeb;
 }
 
 /* Plataforma de Cursos */
@@ -155,7 +158,7 @@ nav {
   align-items: center;
   flex-direction: column;
   padding: 20px;
-  margin-top: 86px;
+  margin-top: 98px;
   color: #fff;
 }
 
@@ -225,7 +228,7 @@ nav {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  margin: 90px 0 0 28px;
+  margin: 200px 0 0 28px;
   color: #fff;
 }
 
