--- a/cripto-react/src/components/Footer.css
+++ b/cripto-react/src/components/Footer.css
@@ -1,43 +1,45 @@
 /* Footer */
-footer {
-    background: linear-gradient(135deg, #000, #272042, #1a1a1a);
+  .footer {
+    background-color: #1b1919;
+    opacity: 50%;
     color: #fff;
-    padding: 30px 50px 10px;
   }
   
   .footerInfo {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
   }
   
-  .footerLink a {
-    display: block;
+  .footerInfo .logo {
+    margin-left: 912px;
+  }
+
+  .detalhes {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  .detalhes a{
     color: #fff;
     text-decoration: none;
-    margin: 5px 0;
-    transition: text-decoration 0.3s ease;
+    padding: 20px;
   }
   
-  .footerLink a:hover {
-    text-decoration: underline;
+  .redesSociais{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
   }
-  
-  .redesSociais img {
-    width: 30px;
-    margin-left: 10px;
-    transition: transform 0.3s ease, filter 0.3s ease;
+
+  .redesSociais a {
+    padding: 5px;
   }
-  
-  .redesSociais img:hover {
-    transform: scale(1.2);
-    filter: brightness(1.5);
-  }
-  
+
   .copy {
     text-align: center;
     margin-top: 20px;
+    margin-right: 60px;
     font-size: 14px;
   } 
   .copyT{
