--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -40,7 +40,7 @@
   width: 100%;
   max-width: 1200px;
   flex-wrap: wrap;
-
+  margin-bottom: 200px;
 }
 
 .formAndChartContainer {
@@ -156,6 +156,10 @@
   text-transform: uppercase;
 }
 
+.riskText {
+  color: #fff;
+}
+
 @media (max-width: 1024px) {
   .main {
     flex-direction: column;
@@ -172,8 +176,4 @@
     width: 100%;
     max-width: 600px;
   }
-}
-
-.riskText {
-  color: #fff;
 }
