--- a/cripto-react/src/components/Navbar.module.css
+++ b/cripto-react/src/components/Navbar.module.css
@@ -1,5 +1,5 @@
 /* Header/Navbar */
-header {
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,12 +40,13 @@ nav {
 .cadastroButton {
     background: linear-gradient(135deg, #3f025b, #b12092);
     color: #fff;
-    height: 50px;
+    height: 40px;
     font-size: 20px;
-    margin-top: 10px;
+    margin-top: 17px;
     border: none;
     border-radius: 20px;
     font-family: 'Orbitron', sans-serif;
+    font-size: 17px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
     padding: 10px 20px;
